fixed scss spacing

--- a/browser/scss/blends/main.scss
+++ b/browser/scss/blends/main.scss
@@ -3,6 +3,14 @@
 		button{
 			width: 100%;
 		}
+		.container {
+			width: 100%;
+		}
+	}
+	#right-panel{
+		.container{
+			width: 100%;
+		}
 	}
 }
 
